# pixelated-medicine

./: README.md
.github/workflows/: static.yml
analysis-code/: README.md  requirements.txt  script.py
pixelated-medicine/: .gitignore  README.md  icc-analyze.py  icc_data_selection.py  main.py  pyproject.toml
website/: index.html  script.js  style.css
