[project]
name = "pixelated-medicine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "igdb-api-v4>=0.3.3",
    "lxml>=6.0.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pingouin>=0.5.5",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "scikit-posthocs>=0.11.4",
    "statsmodels>=0.14.5",
]
